<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="104dp"
        android:text="@string/seleccionar_genero"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="36dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/radioHombre"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:clickable="true"
            android:text="@string/hombre" />

        <RadioButton
            android:id="@+id/radioMujer"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:clickable="true"
            android:text="@string/mujer" />

        <RadioButton
            android:id="@+id/radioBinario"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:clickable="false"
            android:text="@string/no_binario" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="358dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:buttonTint="#FF5722"
        android:checked="false"
        android:text="@string/acepto_los_termino_y_condiciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button"
        android:layout_width="358dp"
        android:layout_height="45dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:text="@string/aceptar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>